--- a/index.html
+++ b/index.html
@@ -14,12 +14,14 @@
             <th>Votes</th>
             <th>Delegates</th>
         </tr>
-        <tr>
-            <td style="background-color: green;">Donald Trump</td>
+        <div>
+            <tr class="bet">
+            <td>Donald Trump</td>
             <td>R</td>
             <td>56,260</td>
             <td>20</td>
         </tr>
+        </div>
         <tr>
             <td>Ron DeSantis</td>
             <td>R</td>
